# agent_core

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TICKETS.md  pyproject.toml
docs/: ARCHITECTURE.md  BUG_LOG.md  LOGBOOK.md  TICKETS.md
python/agent_core/: __init__.py  models.py
src/: brain.rs  capture.rs  detection.rs  eye.rs  input.rs  lib.rs  main.rs  ocr.rs  record.rs  validation.rs
