[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "agent_core"
version = "0.1.2"
description = "Eyes, Brain, and Hands for AI agents - capture, vision, reasoning, input"
requires-python = ">=3.8"
dependencies = ["Pillow"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "agent_core.agent_core"
